# public

./: public
dotfiles/: README.md
dotfiles/R/.config/R/: tennyson-common.R
dotfiles/archive/installs/: README.md  all-install.sh  arch-install.sh  centos-install.sh  config_gen_all.sh  dockerfile  mac-install.sh  network-notes.md
dotfiles/archive/screenlayout/.screenlayout/: terra_big_left.sh  terra_big_right.sh
dotfiles/ares/: .Xresources
dotfiles/brew/.config/brew/: Brewfile
dotfiles/emacs/: .spacemacs
dotfiles/emacs/.config/emacs/: 20-helper-functions.el  20-system-integration-functions.el  20-util-org.el  20-window-util.el  30-keybindings.el  50-ai.el  50-misc.el  50-package-compilation-mode.el  50-package-projectile.el  50-vline.el  60-dired.el  60-ess.el  60-gpg.el  60-latex.el  60-layouts.el  60-ledger.el  60-lsp.el  60-minibuffer.el  60-org.el  60-pdf.el  60-persp.el  60-python.el  60-shell-sending.el  60-typescript.el  60-web.el  60-yaml.el  70-machine-specific.el  99-archive.el
dotfiles/ghostty/.config/ghostty/: config
dotfiles/hammerspoon/.hammerspoon/: init.lua
dotfiles/i3/.config/i3/: config.ares-host  config.base  config.local.example  config.terra-host  config_gen.sh
dotfiles/mpv/.config/mpv/: input.conf  mpv.conf
dotfiles/nix/.config/nix/: .gitignore  Makefile  README.md  flake.nix  home-manager.nix  imessage-exporter.nix  (+18 more)
dotfiles/nix/.config/nix/nixpy3.12/: pyproject.toml
dotfiles/nix/.config/nix/nixpy3.9/: pyproject.toml
dotfiles/tmux/: .tmux.conf
dotfiles/vim/: .vimrc
dotfiles/visidata/: .visidatarc
dotfiles/xorg/: .gitignore  .xinitrc
dotfiles/yarn/: .yarnrc.yml
dotfiles/zsh/: .zshrc
public/: README.mkd  sync.sh
ref/: ascii.csv  greek-alpha.csv
scripts/infra/: aws-kill-all-instances.sh  aws-recent-cost.sh  aws-watch-cost.sh  aws-watch-instances.sh
scripts/iot/: niimbot.sh
scripts/mac/: toggle-dark-mode.sh
tbardwell.com/: go
(+68 files in other folders)
