[project]
name = "nix.py3.12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "fastparquet>=2024.11.0",
    "jsonpickle>=4.1.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "parquet>=1.3.1",
    "pip>=25.2",
    "pipe>=2.2",
    "plotnine>=0.15.0",
    "polars>=1.33.1",
    "pygam>=0.9.1",
    "pypdf>=6.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scikit-misc>=0.5.1",
    "scipy>=1.16.2",
    "scrapy>=2.13.3",
    "simple-term-menu>=1.6.6",
    "spyder-kernels>=3.0.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
