[project]
name = "nix.py3.9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "econml>=0.16.0",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.34.5",
    "jsonpickle>=4.1.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "lxml>=6.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "parquet>=1.3.1",
    "pip>=25.2",
    "pipe>=2.2",
    "plotnine>=0.13.6",
    "polars>=1.33.1",
    "pygam>=0.9.1",
    "pypdf>=6.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "scikit-misc>=0.3.1",
    "scipy>=1.13.1",
    "scrapy>=2.13.3",
    "simple-term-menu>=1.6.6",
    "spyder-kernels>=3.0.5",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "yfinance>=0.2.65",
]
